# MVSWrapper

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build-deps.sh  build-ort.sh  build-torch.sh  build.sh
cmake/: FindHikVisionMVS.cmake  FindHuarayMV.cmake  argparse.cmake  clipper.cmake  ctre.cmake  cxx_module.cmake  fmt.cmake  json.cmake  mimalloc.cmake  onnxruntime.cmake  options.cmake  paddle.cmake  spdlog.cmake  utils.cmake
cmake/comp/: filecache.deps.cmake  ocr.deps.cmake
cmake/ext/: clipper.cmake  clipper.vars.cmake  fmt.cmake  mimalloc.cmake  msgpack.cmake  msgpack.post.cmake  msgpack.vars.cmake  onnxruntime.cmake  onnxruntime.post.cmake  onnxruntime.vars.cmake  opencv.cmake  spdlog.cmake
cmake/ext/absl/: CMakeLists.txt
cmake/ext/argparse/: CMakeLists.txt
cmake/ext/boost/: CMakeLists.txt
cmake/ext/brotli/: CMakeLists.txt
cmake/ext/ctre/: CMakeLists.txt
cmake/ext/fmt/: CMakeLists.txt
cmake/ext/freetype/: CMakeLists.txt
cmake/ext/harfbuzz/: CMakeLists.txt
cmake/ext/lz4/: CMakeLists.txt
cmake/ext/mimalloc/: CMakeLists.txt
cmake/ext/mini/: CMakeLists.txt
cmake/ext/nameof/: CMakeLists.txt
cmake/ext/nlohmann_json/: CMakeLists.txt
cmake/ext/opencv/: CMakeLists.txt
cmake/ext/opencv/linkage/: freetype.cmake
cmake/ext/opencv/options/: freetype.cmake
cmake/ext/opencv_contrib/: CMakeLists.txt
cmake/ext/paddle/: CMakeLists.txt
cmake/ext/paddle/vars/2.4.2/: detections.cmake
cmake/ext/paddle/vars/2.4.2/Windows/: cpu.cmake
cmake/ext/paddle/vars/2.4.2/Windows/cuda/: 11.6.cmake
cmake/ext/png/: CMakeLists.txt
cmake/ext/protobuf/: CMakeLists.txt
cmake/ext/spdlog/: CMakeLists.txt
cmake/ext/sqlite3/: CMakeLists.txt  sqlite3.cmake
cmake/ext/sqlite3/vars/: 3.41.0.cmake  3.41.1.cmake
cmake/ext/xlnt/: CMakeLists.txt
cmake/ext/xlsxwriter/: CMakeLists.txt
cmake/ext/zlib/: CMakeLists.txt
cmake/ext/zstd/: CMakeLists.txt
cmake/pre/comp/: camera.cmake  common.cmake  ini.cmake  preprocessor.cmake  winutils.cmake
cmake/pre/ext/: absl.cmake  argparse.cmake  boost.cmake  brotli.cmake  ctre.cmake  fmt.cmake  freetype.cmake  harfbuzz.cmake  lz4.cmake  mimalloc.cmake  mini.cmake  nameof.cmake  nlohmann_json.cmake  opencv.cmake  paddle.cmake  png.cmake  protobuf.cmake  spdlog.cmake  sqlite3.cmake  xlnt.cmake  xlsxwriter.cmake  zlib.cmake  zstd.cmake
cmake/pre/ext/opencv_contrib/: freetype.cmake
cmake/sys/basler/: CMakeLists.txt
cmake/sys/mvs/: CMakeLists.txt
comp/: CMakeLists.txt
comp/camera/: CMakeLists.txt  example.cpp
comp/camera/include/utilities/camera/: base.hpp  basler.hpp  fake.hpp  hikvision.hpp  huaray.hpp  mvs.hpp
comp/camera/source/: basler.cpp  fake.cpp  mvs.cpp  utils.hpp
comp/camera/source/camera/: basler.cpp  fake.cpp  hikvision.cpp  huaray.cpp  mvs.cpp  utils.hpp
comp/common/: CMakeLists.txt
comp/common/include/utilities/: ini.hpp  preprocessor.hpp  std.hpp  stopwatch.hpp
comp/common/include/utilities/std/: win.hpp
comp/common/source/: ini.cpp
comp/common/source/common/: ini.cpp  stopwatch.cpp
comp/common/source/std/: win.cpp
comp/filecache/: CMakeLists.txt
comp/filecache/pub/utilities/: filecache.hpp
comp/filecache/src/: filecache.cpp
comp/gemalto/: .gitignore  CMakeLists.txt  main.cpp
comp/gemalto/include/gemalto/legacy/: superdog.hpp
comp/ini/: CMakeLists.txt
comp/ini/include/utilities/: ini.hpp
comp/ini/source/: ini.cpp
comp/mvs/: CMakeLists.txt  main.cpp  mvs.hpp  mvs.inc.h  mvs.ixx
comp/ocr/: CMakeLists.txt  main.cpp  ocr.hpp  ocr.inc.h  ocr.ixx
comp/preprocessor/: CMakeLists.txt
comp/preprocessor/include/utilities/: preprocessor.hpp
comp/superdog/: CMakeLists.txt  gemalto.ixx  superdog.inc.h
comp/superdog/pub/utilities/: gemalto.h
comp/winutils/: CMakeLists.txt
comp/winutils/include/utilities/winutils/: ini.hpp  registry.hpp  strings.hpp
comp/winutils/source/: ini.cpp  registry.cpp  strings.cpp
examples/: CMakeLists.txt  detect.cpp  ocr.cpp  yolo.cpp
examples/cmake/: common.cmake
include/: augmentation.hpp
include/inference/: constants.hpp  labels.hpp  transformation.hpp
include/inference/onnxruntime/: model.hpp
include/inference/onnxruntime/ocr/: classifier.hpp  detector.hpp  recogniser.hpp
include/inference/paddlepaddle/: ocr.hpp
include/inference/torchscript/: filter.hpp  transformation.hpp  utils.hpp  yolov5.hpp
include/inference/torchscript/yolo/: augmentation.hpp  nms.hpp  utils.hpp  v5.hpp
include/wrapper/: net.hpp
inferences/: CMakeLists.txt
inferences/cmake/: inferences-config.cmake.in
inferences/cmake/config/framework/: onnxruntime.cmake.in  torchscript.cmake.in
inferences/include/framework/onnxruntime/: model.hpp
inferences/include/framework/onnxruntime/ocr/: classifier.hpp  detector.hpp  recogniser.hpp
inferences/include/framework/torchscript/: filter.hpp
inferences/include/framework/torchscript/yolo/: v5.hpp
inferences/include/wrapper/: net.hpp
inferences/src/framework/: transformation.hpp
inferences/src/framework/onnxruntime/: model.cpp
inferences/src/framework/onnxruntime/ocr/: classifier.cpp  detector.cpp  recogniser.cpp  utils.hpp
inferences/src/framework/torchscript/: filter.cpp  transformation.hpp
inferences/src/framework/torchscript/yolo/: nms.hpp  v5.cpp
inferences/src/wrapper/: net.cpp
inferences/src/wrapper/utils/: unix.hpp
src/: detect.cpp
src/images/: ort.cpp  torch.cpp
toolchains/gnu/: host.cmake
toolchains/ubuntu/: gcc-11.cmake  gcc-9.cmake
weights/: .gitignore
