file(GLOB CURRENT_SOURCES LIST_DIRECTORIES OFF RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "src/*.cpp")

set(COMPONENT_STATIC_NAME "${PROJECT_ALIAS_NAMESPACE}-${COMPONENT_NAME}")
set(COMPONENT_STATIC_ALIAS "${PROJECT_ALIAS_NAMESPACE}::${COMPONENT_NAME}")
add_library("${COMPONENT_STATIC_NAME}" STATIC ${CURRENT_SOURCES})
add_library("${COMPONENT_STATIC_ALIAS}" ALIAS "${COMPONENT_STATIC_NAME}")

set(COMPONENT_BUILD_TARGETS "${COMPONENT_STATIC_NAME}")

string(TOUPPER "${COMPONENT_NAME}" COMPONENT_NAME_UPPER)
if (${PROJECT_OPTIONS_PREFIX}_BUILD_${COMPONENT_NAME_UPPER}_SHARED)
	set(COMPONENT_SHARED_NAME "${COMPONENT_STATIC_NAME}-shared")
	set(COMPONENT_SHARED_ALIAS "${COMPONENT_STATIC_ALIAS}::shared")
	add_library("${COMPONENT_SHARED_NAME}" SHARED ${CURRENT_SOURCES})
	add_library("${COMPONENT_SHARED_ALIAS}" ALIAS "${COMPONENT_SHARED_NAME}")
	list(APPEND COMPONENT_BUILD_TARGETS "${COMPONENT_SHARED_NAME}")
endif ()

foreach (BUILD_TARGET IN LISTS COMPONENT_BUILD_TARGETS)
	target_include_directories("${BUILD_TARGET}"
		PUBLIC
			"${CMAKE_CURRENT_SOURCE_DIR}/pub"
	)
endforeach ()
