set(__S_CURRENT_SOURCES "src/filecache.cpp")

set(COMPONENT_STATIC_NAME "${ALIAS_NAMESPACE}-${COMPONENT_NAME}")
set(COMPONENT_STATIC_ALIAS "${ALIAS_NAMESPACE}::${COMPONENT_NAME}")
add_library("${COMPONENT_STATIC_NAME}" STATIC ${CURRENT_SOURCES})
add_library("${COMPONENT_STATIC_ALIAS}" ALIAS "${COMPONENT_STATIC_NAME}")

set(COMPONENT_BUILD_TARGETS "${COMPONENT_STATIC_NAME}")

string(TOUPPER "${COMPONENT_NAME}" COMPONENT_NAME_UPPER)
if (${OPTIONS_PREFIX}_${COMPONENT_NAME_UPPER}_BUILD_SHARED_LIBS)
	set(COMPONENT_SHARED_NAME "${COMPONENT_STATIC_NAME}-shared")
	set(COMPONENT_SHARED_ALIAS "${COMPONENT_STATIC_ALIAS}::shared")
	add_library("${COMPONENT_SHARED_NAME}" SHARED ${CURRENT_SOURCES})
	add_library("${COMPONENT_SHARED_ALIAS}" ALIAS "${COMPONENT_SHARED_NAME}")

	list(APPEND COMPONENT_BUILD_TARGETS "${COMPONENT_SHARED_NAME}")
endif ()

foreach (BUILD_TARGET IN LISTS COMPONENT_BUILD_TARGETS)
	target_include_directories("${BUILD_TARGET}"
		PUBLIC
			"${CMAKE_CURRENT_SOURCE_DIR}/pub"
	)
	target_link_libraries("${BUILD_TARGET}"
		PUBLIC
			opencv::core
		PRIVATE
			mio::mio
			opencv::imgcodecs
	)
endforeach ()
