set(ARGPARSE_BUILD_TESTS OFF)
set(ARGPARSE_LONG_VERSION_ARG_ONLY OFF)

FetchContent_Declare(argparse
	GIT_REPOSITORY "$CACHE{__C_GITHUB_PREFIX}p-ranav/argparse.git"
	GIT_TAG "v$CACHE{__C_ARGPARSE_VERSION}"
	GIT_SUBMODULES_RECURSE TRUE
	GIT_SHALLOW "${__G_FETCHCONTENT_GIT_SHALLOW}"
	GIT_REMOTE_UPDATE_STRATEGY CHECKOUT
	OVERRIDE_FIND_PACKAGE
)

find_package(argparse "$CACHE{__C_ARGPARSE_VERSION}" REQUIRED GLOBAL)

set_property(
	TARGET
		argparse
	PROPERTY SYSTEM TRUE
)
