set(FMT_MODULE ON)
set(FMT_OS ON)
set(FMT_SYSTEM_HEADERS OFF)

FetchContent_Declare(fmt
	GIT_REPOSITORY "$CACHE{__C_GITHUB_PREFIX}fmtlib/fmt.git"
	GIT_TAG "$CACHE{__C_FMT_VERSION}"
	GIT_SUBMODULES_RECURSE TRUE
	GIT_SHALLOW "${__G_FETCHCONTENT_GIT_SHALLOW}"
	GIT_REMOTE_UPDATE_STRATEGY CHECKOUT
	OVERRIDE_FIND_PACKAGE
)

find_package(fmt "$CACHE{__C_FMT_VERSION}" REQUIRED GLOBAL)

set_property(
	TARGET
		fmt
		fmt-header-only
	PROPERTY SYSTEM TRUE
)
