set(FT_REQUIRE_ZLIB ON)
set(FT_REQUIRE_PNG ON)
set(FT_DISABLE_HARFBUZZ ON)
set(FT_ENABLE_ERROR_STRINGS ON)

get_ext_version(freetype __L_VERSION)
string(REPLACE "." "-" __L_VERSION_STRING "${__L_VERSION}")

FetchContent_Declare(freetype
	GIT_REPOSITORY "${__G_GITHUB_PREFIX}freetype/freetype.git"
	GIT_TAG "VER-${__L_VERSION_STRING}"
	GIT_SUBMODULES_RECURSE TRUE
	GIT_SHALLOW "${__G_FETCHCONTENT_GIT_SHALLOW}"
	GIT_REMOTE_UPDATE_STRATEGY CHECKOUT
	OVERRIDE_FIND_PACKAGE
)

FetchContent_MakeAvailable(freetype)

set_internal_cache(TARGETS_ENFORCE_SYSTEM TRUE "freetype")

get_archive_path("freetype" __L_FREETYPE_LIBRARY)
get_property(__L_FREETYPE_INCLUDE_DIRS
	TARGET freetype
	PROPERTY INTERFACE_INCLUDE_DIRECTORIES
)

set(FREETYPE_FOUND TRUE PARENT_SCOPE)
set(FREETYPE_INCLUDE_DIRS "${__L_FREETYPE_INCLUDE_DIRS}" PARENT_SCOPE)
set(FREETYPE_LIBRARIES "${__L_FREETYPE_LIBRARY}" PARENT_SCOPE)
set(FREETYPE_VERSION "${__L_VERSION}" PARENT_SCOPE)
set(FREETYPE_VERSION_STRING "${__L_VERSION}" PARENT_SCOPE)
